# litestar-workflows

./: .gitignore  .pre-commit-config.yaml  .prekignore  CONTRIBUTING.rst  CORE_MODULE_SUMMARY.md  MAKEFILE_SUMMARY.md  Makefile  PLAN.md  README.md  pyproject.toml  pyproject.toml.backup
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: BUG.yml  config.yml
.github/workflows/: cd.yml  ci.yml  docs.yml  pages-deploy.yml  pr-title.yml  publish.yml  tests.yml
docs/: changelog.md  conf.py  index.rst  requirements.txt
docs/api/: index.rst  modules.rst  web.rst
docs/architecture/: phase3-web.rst
docs/concepts/: execution.rst  workflows.rst
docs/cookbook/: onboarding.rst
docs/getting-started/: index.rst  installation.rst
docs/guides/: index.rst  web-plugin.rst
examples/: __init__.py  web_api_example.py
examples/full/: __init__.py  app.py
examples/minimal/: __init__.py  app.py
pr-preview/pr-23/: search.html  searchindex.js
pr-preview/pr-23/.doctrees/architecture/: phase3-web.doctree
pr-preview/pr-23/.doctrees/concepts/: steps.doctree
pr-preview/pr-23/.doctrees/cookbook/: document-review.doctree  expense-approval.doctree  onboarding.doctree
pr-preview/pr-23/.doctrees/getting-started/: index.doctree  installation.doctree
pr-preview/pr-23/.doctrees/guides/: index.doctree
pr-preview/pr-23/_modules/litestar_workflows/: exceptions.html  plugin.html
pr-preview/pr-23/_sources/: changelog.md.txt
pr-preview/pr-23/_sources/cookbook/: document-review.rst.txt  expense-approval.rst.txt
pr-preview/pr-23/_sources/getting-started/: quickstart.rst.txt
pr-preview/pr-23/_sources/guides/: conditional-logic.rst.txt
pr-preview/pr-23/api/: modules.html  web.html
pr-preview/pr-23/architecture/: phase3-web.html
pr-preview/pr-23/concepts/: context.html  index.html
pr-preview/pr-23/cookbook/: document-review.html  expense-approval.html  index.html  onboarding.html
pr-preview/pr-24/: changelog.html  genindex.html  objects.inv  searchindex.js
pr-preview/pr-24/.doctrees/api/: index.doctree
pr-preview/pr-24/.doctrees/concepts/: context.doctree  index.doctree
pr-preview/pr-24/.doctrees/cookbook/: expense-approval.doctree
pr-preview/pr-24/_sources/api/: index.rst.txt
pr-preview/pr-24/_sources/cookbook/: index.rst.txt
pr-preview/pr-24/_sources/getting-started/: installation.rst.txt
pr-preview/pr-24/_static/: custom.css
pr-preview/pr-24/api/: modules.html
pr-preview/pr-24/getting-started/: installation.html
pr-preview/pr-25/: .buildinfo  searchindex.js
pr-preview/pr-25/.doctrees/getting-started/: quickstart.doctree
pr-preview/pr-25/.doctrees/guides/: web-plugin.doctree
pr-preview/pr-25/_sources/: index.rst.txt
pr-preview/pr-25/_sources/concepts/: context.rst.txt
pr-preview/pr-25/api/: modules.html
pr-preview/pr-25/concepts/: execution.html
pr-preview/pr-25/getting-started/: quickstart.html
pr-preview/pr-25/guides/: conditional-logic.html  persistence.html  web-plugin.html
pr-preview/pr-26/: index.html  py-modindex.html  searchindex.js
pr-preview/pr-26/.doctrees/: changelog.doctree
pr-preview/pr-26/api/: index.html
pr-preview/pr-26/cookbook/: document-review.html
pr-preview/pr-26/getting-started/: installation.html
pr-preview/pr-26/guides/: human-tasks.html  simple-workflow.html
pr-preview/pr-29/.doctrees/: changelog.doctree
pr-preview/pr-29/api/: modules.html
pr-preview/pr-29/architecture/: index.html
pr-preview/pr-29/cookbook/: integration-patterns.html
pr-preview/pr-29/getting-started/: index.html
pr-preview/pr-30/: changelog.html
pr-preview/pr-30/_modules/: index.html
pr-preview/pr-30/concepts/: steps.html  workflows.html
pr-preview/pr-30/guides/: index.html  parallel-execution.html  web-plugin.html
pr-preview/pr-31/: searchindex.js
pr-preview/pr-31/api/: modules.html
pr-preview/pr-31/cookbook/: onboarding.html
pr-preview/pr-32/: changelog.html
pr-preview/pr-32/cookbook/: expense-approval.html  index.html
pr-preview/pr-32/getting-started/: index.html  installation.html
pr-preview/pr-32/guides/: index.html  simple-workflow.html
pr-preview/pr-33/: genindex.html  index.html  searchindex.js
pr-preview/pr-33/_modules/: index.html
pr-preview/pr-33/api/: index.html  web.html
pr-preview/pr-33/architecture/: index.html  phase3-web.html
pr-preview/pr-33/concepts/: execution.html  index.html  steps.html
pr-preview/pr-33/cookbook/: integration-patterns.html
pr-preview/pr-33/guides/: conditional-logic.html  human-tasks.html  web-plugin.html
pr-preview/pr-35/: .buildinfo  py-modindex.html  search.html
pr-preview/pr-35/.doctrees/: index.doctree
pr-preview/pr-35/api/: modules.html
pr-preview/pr-35/concepts/: context.html  workflows.html
pr-preview/pr-35/cookbook/: document-review.html  onboarding.html
pr-preview/pr-35/getting-started/: quickstart.html
pr-preview/pr-35/guides/: parallel-execution.html  persistence.html
src/litestar_workflows/: __init__.py  __metadata__.py  base.py  exceptions.py  plugin.py
src/litestar_workflows/contrib/: __init__.py
src/litestar_workflows/core/: __init__.py  context.py  definition.py  events.py  models.py  protocols.py  types.py
src/litestar_workflows/db/: __init__.py  engine.py  models.py  repositories.py
src/litestar_workflows/engine/: __init__.py  base.py  graph.py  instance.py  local.py  registry.py
src/litestar_workflows/steps/: __init__.py  base.py  gateway.py  groups.py  timer.py  webhook.py
src/litestar_workflows/web/: __init__.py  config.py  controllers.py  dto.py  exceptions.py  graph.py  plugin.py  views.py
tests/: TEST_SUMMARY.md  conftest.py  docker-compose.yml  pytest.ini  test_context.py  test_db.py  test_definition.py  test_engine.py  test_events.py  test_examples.py  test_exceptions.py  test_fake.py  test_gateway.py  test_graph.py  test_groups.py  test_integration.py  test_plugin.py  test_registry.py  test_steps.py  test_timer.py  test_types.py  test_web.py  test_web_controllers.py  test_web_controllers_db.py  test_web_db_requirement.py  test_web_graph.py
(+95 files in other folders)
