[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "prek>=0.2.18",
  "ruff>=0.8.0",
  "codespell>=2.2.6",
  "ty>=0.0.1a27",
  "pytest>=8.1.1",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.23.6",
  "pytest-sugar>=1.1.1",
]
docs = [
  "sphinx>=7.0.0",
  "shibuya>=2024.8.0",
  "sphinx-copybutton>=0.5.0",
  "sphinx-design>=0.5.0",
  "myst-parser>=2.0.0",
  "sphinx-autobuild>=2024.0.0",
  "sphinx-autodoc-typehints>=2.0.0",
]
lint = [
  "prek>=0.2.18",
  "ruff>=0.8.0",
  "codespell>=2.2.6",
  "ty>=0.0.1a27",
]
test = [
  "pytest>=8.1.1",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.23.6",
]

[project]
authors = [
  {name = "Jacob Coffee", email = "jacob@z7x.org"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: Home Automation",
  "Topic :: Internet",
  "Topic :: Office/Business",
  "Topic :: Office/Business :: Scheduling",
]
dependencies = [
  "litestar>=2",
  "rich-click>=1.7.4",
]
description = "Workflow management in Litestar"
keywords = [
  "litestar",
  "workflows",
  "approvals",
]
license = {text = "MIT"}
name = "litestar-workflows"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
db = ["litestar[sqlalchemy]"]
ui = ["litestar[jinja]"]

[project.urls]
Changelog = "https://github.com/JacobCoffee/litestar-workflows/releases/"
Discord = "https://discord.gg/litestar-919193495116337154"
Documentation = "https://jacobcoffee.github.io/litestar-workflows"
"Issue Tracker" = "https://github.com/JacobCoffee/litestar-workflows/issues"
Reddit = "https://www.reddit.com/r/LitestarAPI"
Repository = "https://github.com/JacobCoffee/litestar-workflows"
Twitter = "https://twitter.com/_scriptr"

[tool.codespell]
skip = "uv.lock"

[tool.coverage.report]
exclude_lines = []
fail_under = 0

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
omit = ["*/tests/*"]
parallel = true
source = ["litestar_workflows"]

[tool.git-cliff.changelog]
header = """
# Changelog

All notable changes to this project will be documented in this file.

"""
body = """
{% if version %}\
    {% if previous.version %}\
## [{{ version | trim_start_matches(pat="v") }}]($REPO/compare/{{ previous.version }}..{{ version }}) - {{ timestamp | date(format="%Y-%m-%d") }}
    {% else %}\
## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
    {% endif %}\
{% else %}\
## [unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}

### {{ group | striptags | trim | upper_first }}

{% for commit in commits
| filter(attribute="scope")
| sort(attribute="scope") %}
- **({{commit.scope}})**{% if commit.breaking %} [**breaking**]{% endif %} {{ commit.message }} - ([{{ commit.id | truncate(length=7, end="") }}]($REPO/commit/{{ commit.id }})) - {{ commit.author.name }}
{%- endfor -%}
{%- for commit in commits %}
{%- if commit.scope -%}
{% else %}
- {% if commit.breaking %}[**breaking**] {% endif %}{{ commit.message }} - ([{{ commit.id | truncate(length=7, end="") }}]($REPO/commit/{{ commit.id }})) - {{ commit.author.name }}
{% endif -%}
{% endfor -%}
{% endfor %}
"""
footer = """
---
*litestar-workflows Changelog*
"""
output = "docs/changelog.md"
postprocessors = [
  {pattern = '\$REPO', replace = "https://github.com/JacobCoffee/litestar-workflows"},
]
trim = true

[tool.git-cliff.git]
commit_parsers = [
  {message = "^feat", group = "Features"},
  {message = "^fix", group = "Bug Fixes"},
  {message = "^doc", group = "Documentation"},
  {message = "^perf", group = "Performance"},
  {message = "^refactor", group = "Refactoring"},
  {message = "^style", group = "Style"},
  {message = "^revert", group = "Revert"},
  {message = "^test", group = "Tests"},
  {message = "^chore\\(version\\):", skip = true},
  {message = "^chore", group = "Miscellaneous Chores"},
  {body = ".*security", group = "Security"},
]
commit_preprocessors = []
conventional_commits = true
filter_commits = false
filter_unconventional = true
ignore_tags = ""
protect_breaking_commits = false
skip_tags = "v0.1.0-beta.1"
sort_commits = "oldest"
split_commits = false
tag_pattern = "v[0-9].*"
topo_order = false

[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "/src",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]
markers = [
  "unit: mark test as unit test",
  "integration: mark test as integration test",
  "e2e: mark test as end-to-end test",
]

[tool.ruff]
fix = true
line-length = 120
src = ["src/litestar_workflows", "tests"]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
  "ERA001",   # Commented-out code
  "TD",       # TODOs
  "FIX002",   # Line contains TODO
  "COM812",   # Missing trailing comma (conflicts with formatter)
  "ISC001",   # Single-line string concatenation (conflicts with formatter)
  "ANN401",   # Dynamically typed Any - necessary for generic workflow context
  "TC003",    # Move stdlib imports to TYPE_CHECKING - causes runtime issues with dataclasses
  "EM101",    # Exception string literal
  "EM102",    # Exception f-string literal
  "TRY003",   # Long exception message
  "TRY002",   # Raise vanilla Exception - will use custom exceptions where appropriate
  "ARG002",   # Unused method argument - expected for abstract base classes/protocols
  "PERF401",  # Use list comprehension - readability over micro-optimization
  "PLC0415",  # Import not at top of file - sometimes needed for circular imports
  "FBT001",   # Boolean positional argument - acceptable for simple config flags
  "FBT002",   # Boolean default argument - acceptable for simple config flags
  "BLE001",   # Blind exception catch - needed in workflow engine for graceful error handling
  "PLC0105",  # TypeVar naming convention - T is conventional for generic type
  "C901",     # Too complex - workflow engine has inherent complexity
  "PLR0912",  # Too many branches - workflow engine state machine needs branches
  "PLR0915",  # Too many statements - workflow engine is complex by nature
]
select = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["litestar_workflows", "tests"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = [
  "A001",     # Variable shadowing builtin
  "INP001",   # Implicit namespace package
  "PTH",      # Use pathlib
  "DTZ",      # Datetime timezone
]
"tests/**/*.*" = [
  "A",
  "ANN",
  "ARG",
  "B",
  "BLE",
  "C901",
  "D",
  "DTZ",
  "EM",
  "ERA001",
  "F841",     # Unused variables
  "FBT",
  "G",
  "N",
  "PGH",
  "PIE",
  "PLR",
  "PLW",
  "PTH",
  "RET504",   # Unnecessary assignment before return
  "RSE",
  "S",
  "S101",
  "SIM",
  "SLF001",
  "TCH",
  "TRY",
  "UP006",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty]

[tool.ty.environment]
python = ".venv"

[tool.ty.rules]
deprecated = "warn"

[tool.ty.src]
exclude = ["docs/conf.py", "tests/"]

[tool.uv]
default-groups = ["dev"]
